회원가입 구현, Front 수정

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -53,7 +53,7 @@
         <div class="login_container inner_1280">
             <div class="login_wrap">
                 <p class="login_tit">회원가입</p>
-                <form action="/register" method="post">
+                <form action="/member/register" method="post">
                     <ul>
                         <li>
                             <input type="text" placeholder="아이디" name="memberId">
@@ -62,16 +62,13 @@
                             <input type="password" placeholder="비밀번호" name="memberPw">
                         </li>
                         <li>
-                            <input type="text" placeholder="이메일" name="memberEmail">
-                        </li>
-                        <li>
                             <input type="text" placeholder="이름" name="memberName">
                         </li>
                         <li>
-                            <input type="text" placeholder="주소" name="memberAddr">
+                            <input type="text" placeholder="성별" name="memberGender">
                         </li>
                         <li>
-                            <input type="text" placeholder="상세주소" name="memberDetailAddr">
+                            <input type="text" placeholder="주소" name="address">
                         </li>
                     </ul>
                     <input type="submit" value="회원가입">
