--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,14 +29,14 @@
     <header>
         <nav class="inner_1280">
             <div class="top_nav">
-                <div class="nav_login" th:if="${session.loginId != null}">
+                <div class="nav_login" th:if="${session.loginName != null}">
                     <ul>
                         <li>
                             <a href="#" th:text="${session.loginName}"></a>
                             <span> 님 환영합니다.</span>
                         </li>
                         <li>
-                            <a href="/logout">로그아웃</a>
+                            <a href="/member/logout">로그아웃</a>
                         </li>
                         <li>
                             <a href="#">고객센터</a>
@@ -46,13 +46,13 @@
                         </li>
                     </ul>
                 </div>
-                <div class="nav_login" th:if="${session.loginId == null}">
+                <div class="nav_login" th:if="${session.loginName == null}">
                     <ul>
                         <li>
-                            <a href="/login">로그인</a>
+                            <a href="/member/login">로그인</a>
                         </li>
                         <li>
-                            <a href="/register">회원가입</a>
+                            <a href="/member/register">회원가입</a>
                         </li>
                         <li>
                             <a href="#">고객센터</a>
