--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,10 +17,10 @@
                 <div class="nav_login">
                     <ul>
                         <li>
-                            <a href="/login">로그인</a>
+                            <a href="/member/login">로그인</a>
                         </li>
                         <li>
-                            <a href="#">회원가입</a>
+                            <a href="/member/register">회원가입</a>
                         </li>
                         <li>
                             <a href="#">고객센터</a>
@@ -53,7 +53,7 @@
         <div class="login_container inner_1280">
             <div class="login_wrap">
                 <p class="login_tit">로그인</p>
-                <form action="/login" method="post">
+                <form action="/member/login" method="post">
                     <ul>
                         <li>
                             <input type="text" placeholder="아이디" name="memberId">
@@ -69,7 +69,7 @@
                             <div class="find_account">
                                 <a href="#">아이디 찾기</a>
                                 <a href="#">비밀번호 찾기</a>
-                                <a href="#">회원가입</a>
+                                <a href="/member/register">회원가입</a>
                             </div>
                         </li>
                     </ul>
