--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,10 +17,10 @@
                 <div class="nav_login">
                     <ul>
                         <li>
-                            <a href="/login">로그인</a>
+                            <a href="/member/login">로그인</a>
                         </li>
                         <li>
-                            <a href="/register">회원가입</a>
+                            <a href="/member/register">회원가입</a>
                         </li>
                         <li>
                             <a href="#">고객센터</a>
