--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,7 +53,8 @@
         <div class="login_container inner_1280">
             <div class="login_wrap">
                 <p class="login_tit">로그인</p>
-                <form action="/member/login" method="post">
+                <form th:action="@{/login}" method="post">
+                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
                     <ul>
                         <li>
                             <input type="text" placeholder="아이디" name="memberId">
