--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +53,8 @@
         <div class="login_container inner_1280">
             <div class="login_wrap">
                 <p class="login_tit">회원가입</p>
-                <form action="/member/register" method="post">
+                <form th:action="@{/member/register}" method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <ul>
                         <li>
                             <input type="text" placeholder="아이디" name="memberId">
